# study-dematerializer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/api/: config.py  main.py
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts
docs/: MVP5_HANDOFF.md  MVP6_REAL_LLM_SMOKE.md
evals/: eval_utils.py  grading_eval_report.md  run_grading_eval.py
examples/: STUDY.sample.md
scripts/: debug_tutor_overlay.py  diagnose_session_stages.py  smoke_local.py  smoke_real_llm.py
src/gonghaebun/: cli.py  (+4 more)
tests/: test_api_bank.py  test_api_build_bank.py  test_api_compiler_analyze.py  test_api_concept_compile.py  test_api_confusion_map.py  test_api_due.py  test_api_health.py  test_api_mapping_tasks.py  test_api_project.py  test_api_project_bootstrap.py  test_api_review_bank.py  test_api_sessions_blank.py  test_api_sessions_get.py  test_api_sessions_post.py  test_api_sessions_post_llm.py  test_api_sources.py  test_api_study_md.py  test_api_study_session.py  test_api_study_session_422.py  test_api_study_session_prerequisite.py  test_api_study_validate.py  test_api_weak.py  test_bank_session.py  test_block_parser.py  test_card_service.py  test_compiler_analyzer_service.py  test_compiler_tutor_overlay.py  test_concept_compiler_units.py  test_confusion_map.py  test_conversation_smoke.py  test_data_models.py  test_deterministic_evaluator.py  test_evaluation_schema.py  test_evaluation_structured.py  test_evaluator_compactness.py  test_gibberish_guard.py  test_golden_run_smoke.py  test_grading_blank.py  test_grading_eval.py  test_grading_factory.py  (+40 more)
(+213 files in other folders)
