[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gonghaebun"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["pytest>=8", "pytest-cov", "httpx>=0.27"]

[project.scripts]
gonghaebun = "gonghaebun.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gonghaebun.prompts" = ["*.txt"]
