[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gonghaebun"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
llm = ["openai>=1.0"]
dev = ["pytest>=8", "pytest-cov", "httpx>=0.27", "openai>=1.0"]

[project.scripts]
gonghaebun = "gonghaebun.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gonghaebun.prompts" = ["*.txt"]
